Fixed docker-compose yaml from PWD to .

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
             # since this app creates networks and launches containers, we need to talk to docker daemon
             - /var/run/docker.sock:/var/run/docker.sock
             # mount the box mounted shared folder to the container
-            - $PWD:/go/src
+            - .:/go/src
             - sessions:/pwd
     l2:
         container_name: l2
@@ -29,7 +29,7 @@ services:
         command: /bin/sh -c 'ssh-keygen -N "" -t rsa -f /etc/ssh/ssh_host_rsa_key >/dev/null; cd /go/src/router/l2; if [ -e /runbin/l2 ]; then /runbin/l2 -ssh_key_path /etc/ssh/ssh_host_rsa_key -name l2 -save /pwd/networks; else go run l2.go -ssh_key_path /etc/ssh/ssh_host_rsa_key -name l2 -save /pwd/networks; fi'
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
-            - $PWD:/go/src
+            - .:/go/src
             - networks:/pwd
         ports:
             - "8022:22"
